2001-05-16  Cyrille Chepelov  <chepelov@calixo.net>

	
	* plug-ins/svg/render_svg.c: typo made exported ellipses
	corrupted (zero Y pseudo-radius).

	* objects/network/network.c:
	* objects/network/disc.c:
	* shapes/network/disc.(shape|xpm): Converted the first
	Renderobject into a shape. Normally, old diagrams should reload
	without problems (please check this against your diagrams). More
	flexibility should be gained that way. I intend to hunt and
	eradicate all renderobjects as I can commit cycles to that. 

	* objects/Makefile.am:
	* configure.in:
	* app/Makefile.am:
	* objects/sybase/sybase.c:
	* shapes/sybase/Makefile.am(NEW):
	* shapes/sybase/client.(xpm|shape) (NEW):
	* shapes/sybase/dataserver.(xpm|shape) (NEW):
	* shapes/sybase/ltm.(xpm|shape) (NEW):
	* shapes/sybase/repserver.(xpm|shape) (NEW):
	* shapes/sybase/rsm.(xpm|shape) (NEW):
	* shapes/sybase/stableq.(xpm|shape) (NEW): converted Sybase
	renderobjects into shapes. The Sybase objects are now not compiled
	anymore, and ready to be nuked if nobody objects in the next few weeks.
	
	* app/commands.c:
	* app/diagram.[ch]:
	* app/disp_callbacks.c:
	* app/display.[ch]:
	* app/interface.[ch]:
	* app/menus.[ch]:
	* app/modify_tool.c:
	* app/preferences.[ch]:
	* app/recent_files.c:
	* app/select.c: Added patch #52364 from Hubert Figuiere. This adds
	a menu bar reflecting the popup menu, to each display window. This
	is optional (changing the preference currently doesn't affect
	already opened windows; a few other rough edges to cut).

	* plug-ins/wpg/wpg.c:
	* plug-ins/xfig/xfig-import.c:
	* plug-ins/python/pydia-property.c:
	* plug-ins/python/pydia-properties.c:
	* plug-ins/python/pydia-geometry.c:
	* plug-ins/pstricks/render_pstricks.c:
	* lib/arrows.c:
	* objects/EML/dbox.c:
	* lib/ps-utf8.c: paleolithic C compilers choke on //. Should fix 
	#53054.

	* lib/ps-utf8.c: improved the clustering of alphabetic character
	definitions in custom encodings pages.
	
2001-05-02  Hans Breuer  <hans@breuer.org>
