@@ -1,0 +1,15 @@
+<?xml version="1.0"?>
+<shape xmlns="http://www.daa.com.au/~james/dia-shape-ns"
+       xmlns:svg="http://www.w3.org/2000/svg">
+  <name>Network - WAN Connection</name>
+  <icon>flash.xpm</icon>
+  <connections>
+     <point x="3.5" y="11"/>
+  </connections>
+  <textbox x1="0" y1="11.1" x2="7" y2="14.1" align="center" resize="no"/>
+  <svg:svg width="7cm" height="11cm">
+    <svg:polygon style="stroke:none; fill:foreground"
+    points="2.03,.99 4.97,.99 3.99,3.52 6.58,3.52 2.03,10.45 3.01,5.5 .98,5.5"
+    />
+  </svg:svg>
+</shape>
