@@ -1,0 +1,27 @@
+/* XPM */
+static char * flash_xpm[] = {
+"22 22 2 1",
+" 	c None",
+".	c #000000",
+"            .....     ",
+"            .....     ",
+"            .....     ",
+"           .....      ",
+"           .....      ",
+"          .....       ",
+"          .....       ",
+"         .....        ",
+"         ........     ",
+"        .........     ",
+"        ........      ",
+"         .......      ",
+"            ...       ",
+"           ...        ",
+"           ..         ",
+"          ...         ",
+"          ..          ",
+"         ...          ",
+"         ..           ",
+"        ..            ",
+"        .             ",
+"                      "};
