@@ -1,0 +1,28 @@
+/* XPM */
+static char * hub_xpm[] = {
+"22 22 3 1",
+" 	c None",
+".	c #000000",
+"+	c #FFFFFF",
+"                      ",
+"                      ",
+"                      ",
+"                      ",
+"                      ",
+" .................... ",
+" .++++++++++++++++++. ",
+" .++++++++++++++++++. ",
+" .++++++++++++++++++. ",
+" .++++++++++++++++++. ",
+" .++++++++++++++++++. ",
+" .+..+..+..+..++...+. ",
+" .+..+..+..+..++...+. ",
+" .+..+..+..+..++...+. ",
+" .++++++++++++++++++. ",
+" .................... ",
+"                      ",
+"                      ",
+"                      ",
+"                      ",
+"                      ",
+"                      "};
