@@ -1,0 +1,23 @@
+<?xml version="1.0"?>
+<shape xmlns="http://www.daa.com.au/~james/dia-shape-ns"
+       xmlns:svg="http://www.w3.org/2000/svg">
+  <name>Network - RJ45 Wall-Plug</name>
+  <icon>rj45plug.xpm</icon>
+  <connections>
+     <point x="1.25" y="2.7"/>
+  </connections>
+  <aspectratio type="fixed"/>
+  <textbox x1="0" y1="2.8" x2="2.5" y2="5.8" align="center" resize="no"/>
+  <svg:svg width="2.5cm" height="2.7cm">
+    <svg:rect style="stroke: foreground; stroke-width:.08; fill:#B3B3B3"
+     x="0" y="0" width="2.5" height="2"/>
+
+    <svg:rect style="stroke:foreground; stroke-width:.08; fill:background"
+     x=".325" y=".34" width="1.85" height="1.32"/>
+    <svg:rect style="stroke:foreground; stroke-width:.08; fill:#B3B3B3"
+     x=".825" y="1.34" width=".85" height=".32"/>
+
+    <svg:path style="stroke:foreground; stroke-width:.08"
+     d="M.675,.34 L.675,.5 M.825,.34 L.825,.5 M1,.34 L1,.5 M1.175,.34 L1.175,.5 M1.325,.34 L1.325,.5 M1.5,.34 L1.5,.5 M1.675,.34 L1.675,.5 M1.825,.34 L1.825,.5"/>
+  </svg:svg>
+</shape>
